Updated ipynb using Colab

--- a/Mental_Health_Sentiment_Analysis_ProjectGroup5.ipynb
+++ b/Mental_Health_Sentiment_Analysis_ProjectGroup5.ipynb
@@ -1214,122 +1214,122 @@
       },
       "outputs": [],
       "source": [
-        "# from ipywidgets import widgets, VBox, Label, Button, Dropdown\n",
-        "# from IPython.display import display\n",
-        "# import numpy as np\n",
-        "# import pickle\n",
-        "# import tensorflow_hub as hub\n",
-        "# import tensorflow as tf\n",
-        "# from nltk.corpus import stopwords\n",
-        "# from nltk.stem import PorterStemmer\n",
-        "# from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+        "from ipywidgets import widgets, VBox, Label, Button, Dropdown\n",
+        "from IPython.display import display\n",
+        "import numpy as np\n",
+        "import pickle\n",
+        "import tensorflow_hub as hub\n",
+        "import tensorflow as tf\n",
+        "from nltk.corpus import stopwords\n",
+        "from nltk.stem import PorterStemmer\n",
+        "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
         "\n",
-        "# # Load resources\n",
-        "# # Tokenizer\n",
-        "# with open('tokenizer.pkl', 'rb') as f:\n",
-        "#     tokenizer = pickle.load(f)\n",
+        "# Load resources\n",
+        "# Tokenizer\n",
+        "with open('tokenizer.pkl', 'rb') as f:\n",
+        "    tokenizer = pickle.load(f)\n",
         "\n",
-        "# # Stopwords and stemmer\n",
-        "# stopwords_list = stopwords.words('english')\n",
-        "# stemmer = PorterStemmer()\n",
+        "# Stopwords and stemmer\n",
+        "stopwords_list = stopwords.words('english')\n",
+        "stemmer = PorterStemmer()\n",
         "\n",
-        "# # XGBoost model\n",
-        "# with open('xgb_model.pkl', 'rb') as f:\n",
-        "#     xgb_model = pickle.load(f)\n",
+        "# XGBoost model\n",
+        "with open('xgb_model.pkl', 'rb') as f:\n",
+        "    xgb_model = pickle.load(f)\n",
         "\n",
-        "# # BERT layers\n",
-        "# bert_preprocess = hub.KerasLayer(\"https://tfhub.dev/tensorflow/bert_en_uncased_preprocess/3\")\n",
-        "# bert_encoder = hub.KerasLayer(\"https://tfhub.dev/tensorflow/bert_en_uncased_L-12_H-768_A-12/4\")\n",
+        "# BERT layers\n",
+        "bert_preprocess = hub.KerasLayer(\"https://tfhub.dev/tensorflow/bert_en_uncased_preprocess/3\")\n",
+        "bert_encoder = hub.KerasLayer(\"https://tfhub.dev/tensorflow/bert_en_uncased_L-12_H-768_A-12/4\")\n",
         "\n",
-        "# # BERT embedding model\n",
-        "# text_input = tf.keras.layers.Input(shape=(), dtype=tf.string, name='text')\n",
-        "# preprocessed_text = bert_preprocess(text_input)\n",
-        "# outputs = bert_encoder(preprocessed_text)\n",
-        "# embedding_model = tf.keras.Model(inputs=[text_input], outputs=[outputs['pooled_output']])\n",
+        "# BERT embedding model\n",
+        "text_input = tf.keras.layers.Input(shape=(), dtype=tf.string, name='text')\n",
+        "preprocessed_text = bert_preprocess(text_input)\n",
+        "outputs = bert_encoder(preprocessed_text)\n",
+        "embedding_model = tf.keras.Model(inputs=[text_input], outputs=[outputs['pooled_output']])\n",
         "\n",
-        "# # Function: Preprocess input text\n",
-        "# def preprocess_text(text):\n",
-        "#     tokens = text.split()\n",
-        "#     stemmed = [stemmer.stem(word) for word in tokens if word.lower() not in stopwords_list]\n",
-        "#     return ' '.join(stemmed)\n",
+        "# Function: Preprocess input text\n",
+        "def preprocess_text(text):\n",
+        "    tokens = text.split()\n",
+        "    stemmed = [stemmer.stem(word) for word in tokens if word.lower() not in stopwords_list]\n",
+        "    return ' '.join(stemmed)\n",
         "\n",
-        "# # Function: Generate BERT embeddings\n",
-        "# def get_embeddings(text):\n",
-        "#     return embedding_model.predict([text])\n",
+        "# Function: Generate BERT embeddings\n",
+        "def get_embeddings(text):\n",
+        "    return embedding_model.predict([text])\n",
         "\n",
-        "# # IPyWidgets components\n",
-        "# input_box = widgets.Text(\n",
-        "#     description=\"Text:\",\n",
-        "#     placeholder=\"Enter a sentence\",\n",
-        "#     style={\"description_width\": \"initial\"},\n",
-        "#     layout={\"width\": \"600px\"}\n",
-        "# )\n",
+        "# IPyWidgets components\n",
+        "input_box = widgets.Text(\n",
+        "    description=\"Text:\",\n",
+        "    placeholder=\"Enter a sentence\",\n",
+        "    style={\"description_width\": \"initial\"},\n",
+        "    layout={\"width\": \"600px\"}\n",
+        ")\n",
         "\n",
-        "# model_selector = Dropdown(\n",
-        "#     options=[\"LSTM\", \"CNN\", \"BERT\"],\n",
-        "#     description=\"Model:\",\n",
-        "#     style={\"description_width\": \"initial\"},\n",
-        "#     layout={\"width\": \"300px\"}\n",
-        "# )\n",
+        "model_selector = Dropdown(\n",
+        "    options=[\"LSTM\", \"CNN\", \"BERT\"],\n",
+        "    description=\"Model:\",\n",
+        "    style={\"description_width\": \"initial\"},\n",
+        "    layout={\"width\": \"300px\"}\n",
+        ")\n",
         "\n",
-        "# output_label = widgets.Label(value=\"\")\n",
-        "# predict_button = Button(description=\"Predict\", button_style=\"success\")\n",
+        "output_label = widgets.Label(value=\"\")\n",
+        "predict_button = Button(description=\"Predict\", button_style=\"success\")\n",
         "\n",
-        "# # Define the prediction logic\n",
-        "# def on_predict_clicked(b):\n",
-        "#     selected_model = model_selector.value\n",
-        "#     input_text = input_box.value.strip()\n",
+        "# Define the prediction logic\n",
+        "def on_predict_clicked(b):\n",
+        "    selected_model = model_selector.value\n",
+        "    input_text = input_box.value.strip()\n",
         "\n",
-        "#     if not input_text:\n",
-        "#         output_label.value = \"Please enter a valid text.\"\n",
-        "#         return\n",
+        "    if not input_text:\n",
+        "        output_label.value = \"Please enter a valid text.\"\n",
+        "        return\n",
         "\n",
-        "#     # Preprocess input text\n",
-        "#     processed_text = preprocess_text(input_text)\n",
+        "    # Preprocess input text\n",
+        "    processed_text = preprocess_text(input_text)\n",
         "\n",
-        "#     if selected_model == \"LSTM\":\n",
-        "#         # LSTM Model: Single-channel input\n",
-        "#         input_sequence = tokenizer.texts_to_sequences([processed_text])\n",
-        "#         input_padded = pad_sequences(input_sequence, maxlen=max_len, padding='post')\n",
-        "#         input_multi_channel = [input_padded]\n",
-        "#         prediction = model_b.predict(input_multi_channel)\n",
-        "#         predicted_index = np.argmax(prediction, axis=1)\n",
+        "    if selected_model == \"LSTM\":\n",
+        "        # LSTM Model: Single-channel input\n",
+        "        input_sequence = tokenizer.texts_to_sequences([processed_text])\n",
+        "        input_padded = pad_sequences(input_sequence, maxlen=max_len, padding='post')\n",
+        "        input_multi_channel = [input_padded]\n",
+        "        prediction = model_b.predict(input_multi_channel)\n",
+        "        predicted_index = np.argmax(prediction, axis=1)\n",
         "\n",
-        "#     elif selected_model == \"CNN\":\n",
-        "#         # CNN Model: Multi-channel input\n",
-        "#         input_sequence = tokenizer.texts_to_sequences([processed_text])\n",
-        "#         input_padded = pad_sequences(input_sequence, maxlen=max_len, padding='post')\n",
-        "#         input_multi_channel = [input_padded, input_padded, input_padded]\n",
-        "#         prediction = model.predict(input_multi_channel)  # Replace 'model' with the CNN model variable\n",
-        "#         predicted_index = np.argmax(prediction, axis=1)\n",
+        "    elif selected_model == \"CNN\":\n",
+        "        # CNN Model: Multi-channel input\n",
+        "        input_sequence = tokenizer.texts_to_sequences([processed_text])\n",
+        "        input_padded = pad_sequences(input_sequence, maxlen=max_len, padding='post')\n",
+        "        input_multi_channel = [input_padded, input_padded, input_padded]\n",
+        "        prediction = model.predict(input_multi_channel)  # Replace 'model' with the CNN model variable\n",
+        "        predicted_index = np.argmax(prediction, axis=1)\n",
         "\n",
-        "#     elif selected_model == \"BERT\":\n",
-        "#         # BERT Model: Generate embeddings and predict with XGBoost\n",
-        "#         bert_embedding = get_embeddings(input_text)\n",
-        "#         prediction = xgb_model.predict_proba(bert_embedding)\n",
-        "#         predicted_index = np.argmax(prediction, axis=1)\n",
+        "    elif selected_model == \"BERT\":\n",
+        "        # BERT Model: Generate embeddings and predict with XGBoost\n",
+        "        bert_embedding = get_embeddings(input_text)\n",
+        "        prediction = xgb_model.predict_proba(bert_embedding)\n",
+        "        predicted_index = np.argmax(prediction, axis=1)\n",
         "\n",
-        "#     # Map index to category name\n",
-        "#     predicted_category = Lb.inverse_transform(predicted_index)  # Replace 'Lb' with the LabelEncoder object\n",
-        "#     output_label.value = f\"Predicted Category: {predicted_category[0]}\"\n",
+        "    # Map index to category name\n",
+        "    predicted_category = Lb.inverse_transform(predicted_index)  # Replace 'Lb' with the LabelEncoder object\n",
+        "    output_label.value = f\"Predicted Category: {predicted_category[0]}\"\n",
         "\n",
-        "# # Reset output when the user types new text or changes the model\n",
-        "# def on_input_change(change):\n",
-        "#     output_label.value = \"\"  # Clear the output\n",
+        "# Reset output when the user types new text or changes the model\n",
+        "def on_input_change(change):\n",
+        "    output_label.value = \"\"  # Clear the output\n",
         "\n",
-        "# # Attach event handlers\n",
-        "# predict_button.on_click(on_predict_clicked)\n",
-        "# input_box.observe(on_input_change, names=\"value\")\n",
-        "# model_selector.observe(on_input_change, names=\"value\")\n",
+        "# Attach event handlers\n",
+        "predict_button.on_click(on_predict_clicked)\n",
+        "input_box.observe(on_input_change, names=\"value\")\n",
+        "model_selector.observe(on_input_change, names=\"value\")\n",
         "\n",
-        "# # Display the interface\n",
-        "# display(VBox([\n",
-        "#     Label(\"Mental Health Text Classification\"),\n",
-        "#     model_selector,\n",
-        "#     input_box,\n",
-        "#     predict_button,\n",
-        "#     output_label\n",
-        "# ]))\n"
+        "# Display the interface\n",
+        "display(VBox([\n",
+        "    Label(\"Mental Health Text Classification\"),\n",
+        "    model_selector,\n",
+        "    input_box,\n",
+        "    predict_button,\n",
+        "    output_label\n",
+        "]))\n"
       ]
     },
     {
